Manage Alarm API
